k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mirolog
  labels:
    app: mirolog
    tier: service
spec:
  type: NodePort
  ports:
  - port: 8080
  selector:
    app: mirolog
